@@ -6460,13 +6460,23 @@ operator|.
 name|getStorages
 argument_list|(
 name|storedBlock
-argument_list|,
-name|State
-operator|.
-name|NORMAL
 argument_list|)
 control|)
 block|{
+if|if
+condition|(
+name|storage
+operator|.
+name|getState
+argument_list|()
+operator|!=
+name|State
+operator|.
+name|NORMAL
+condition|)
+block|{
+continue|continue;
+block|}
 specifier|final
 name|DatanodeDescriptor
 name|node
@@ -14998,13 +15008,23 @@ operator|.
 name|getStorages
 argument_list|(
 name|block
-argument_list|,
-name|State
-operator|.
-name|NORMAL
 argument_list|)
 control|)
 block|{
+if|if
+condition|(
+name|storage
+operator|.
+name|getState
+argument_list|()
+operator|!=
+name|State
+operator|.
+name|NORMAL
+condition|)
+block|{
+continue|continue;
+block|}
 specifier|final
 name|DatanodeDescriptor
 name|cur
@@ -17522,13 +17542,23 @@ operator|.
 name|getStorages
 argument_list|(
 name|b
-argument_list|,
-name|State
-operator|.
-name|NORMAL
 argument_list|)
 control|)
 block|{
+if|if
+condition|(
+name|storage
+operator|.
+name|getState
+argument_list|()
+operator|!=
+name|State
+operator|.
+name|NORMAL
+condition|)
+block|{
+continue|continue;
+block|}
 specifier|final
 name|DatanodeDescriptor
 name|node
