@@ -72,24 +72,6 @@ name|apache
 operator|.
 name|hadoop
 operator|.
-name|hdfs
-operator|.
-name|server
-operator|.
-name|protocol
-operator|.
-name|DatanodeStorage
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|hadoop
-operator|.
 name|util
 operator|.
 name|GSet
@@ -107,34 +89,6 @@ operator|.
 name|util
 operator|.
 name|LightWeightGSet
-import|;
-end_import
-
-begin_import
-import|import
-name|com
-operator|.
-name|google
-operator|.
-name|common
-operator|.
-name|base
-operator|.
-name|Predicate
-import|;
-end_import
-
-begin_import
-import|import
-name|com
-operator|.
-name|google
-operator|.
-name|common
-operator|.
-name|collect
-operator|.
-name|Iterables
 import|;
 end_import
 
@@ -575,69 +529,6 @@ name|get
 argument_list|(
 name|b
 argument_list|)
-argument_list|)
-return|;
-block|}
-comment|/**    * Searches for the block in the BlocksMap and     * returns {@link Iterable} of the storages the block belongs to    *<i>that are of the given {@link DatanodeStorage.State state}</i>.    *     * @param state DatanodeStorage state by which to filter the returned Iterable    */
-DECL|method|getStorages (Block b, final DatanodeStorage.State state)
-name|Iterable
-argument_list|<
-name|DatanodeStorageInfo
-argument_list|>
-name|getStorages
-parameter_list|(
-name|Block
-name|b
-parameter_list|,
-specifier|final
-name|DatanodeStorage
-operator|.
-name|State
-name|state
-parameter_list|)
-block|{
-return|return
-name|Iterables
-operator|.
-name|filter
-argument_list|(
-name|getStorages
-argument_list|(
-name|blocks
-operator|.
-name|get
-argument_list|(
-name|b
-argument_list|)
-argument_list|)
-argument_list|,
-operator|new
-name|Predicate
-argument_list|<
-name|DatanodeStorageInfo
-argument_list|>
-argument_list|()
-block|{
-annotation|@
-name|Override
-specifier|public
-name|boolean
-name|apply
-parameter_list|(
-name|DatanodeStorageInfo
-name|storage
-parameter_list|)
-block|{
-return|return
-name|storage
-operator|.
-name|getState
-argument_list|()
-operator|==
-name|state
-return|;
-block|}
-block|}
 argument_list|)
 return|;
 block|}
